Switch out Mr Greedy to CSS shapes

--- a/src/mr-greedy/dev.pug
+++ b/src/mr-greedy/dev.pug
@@ -1,11 +1,14 @@
 .mr-greedy
+  .mr-greedy__body.body
+    .mr-greedy__body-belly.body__belly
+      .mr-greedy__hand.mr-greedy__hand--left
+        .mr-greedy__finger
+        .mr-greedy__finger
+        .mr-greedy__finger
+    .body__head
   .mr-greedy__eye.mr-greedy__eye--left
   .mr-greedy__eye.mr-greedy__eye--right
   .mr-greedy__mouth
-  .mr-greedy__hand.mr-greedy__hand--left
-    .mr-greedy__finger
-    .mr-greedy__finger
-    .mr-greedy__finger
   .mr-greedy__hand.mr-greedy__hand--right
     .mr-greedy__finger
     .mr-greedy__finger
@@ -15,4 +18,3 @@
     .mr-greedy__foot
   .mr-greedy__leg.mr-greedy__leg--right
     .mr-greedy__foot
-  include greedy-bod.svg
