Updates to lil pancake flip

--- a/src/pancake-flip/dev.pug
+++ b/src/pancake-flip/dev.pug
@@ -1,3 +1,6 @@
-.pancake__wrapper
-  include pancake.svg
+.pancake__container
+  .pancake__wrapper
+      include pancake-two.svg
+      .pancake__back
+        include pancake-back.svg
 include full-pan.svg
