Fix love, death & robots on iOS

--- a/src/love-death-robots/dev.pug
+++ b/src/love-death-robots/dev.pug
@@ -1,9 +1,8 @@
-.container
-  .heart
-  .eye
-    .eye__piece.eye__piece--curved
-    .eye__piece.eye__piece--straight
-  .mouth
-.cloak
-//- img(src='postcloak.png')
-//- img(src='Netflix.png')
+.app
+  .container
+    .heart
+    .eye
+      .eye__piece.eye__piece--curved
+      .eye__piece.eye__piece--straight
+    .mouth
+  .cloak
