--- a/src/hyperspace-jump/style.styl
+++ b/src/hyperspace-jump/style.styl
@@ -2,10 +2,11 @@
   box-sizing border-box
 
 body
-  background-color #111
+  background radial-gradient(#000, #555)
   min-height 100vh
 
 canvas
   position fixed
   height 100vh
   width 100vw
+  // filter blur(2px)
