--- a/src/hyperspace-2/index.pug
+++ b/src/hyperspace-2/index.pug
@@ -1,3 +1,4 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
