--- a/src/hyperspace-2/index.pug
+++ b/src/hyperspace-2/index.pug
@@ -2,3 +2,4 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.js')
