--- a/src/cpc-gravity/index.pug
+++ b/src/cpc-gravity/index.pug
@@ -2,3 +2,5 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js')
+  script(crossorigin, src="https://unpkg.com/react@16.7.0-alpha.2/umd/react.development.js")
+  script(crossorigin, src="https://unpkg.com/react-dom@16.7.0-alpha.2/umd/react-dom.development.js")
