feat: neverending noodles POC

--- a/src/neverending-noodles/index.pug
+++ b/src/neverending-noodles/index.pug
@@ -1,4 +1,8 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.production.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom.production.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/styled-components/4.3.1/styled-components.min.js')
