--- a/src/cpc-planets/style.styl
+++ b/src/cpc-planets/style.styl
@@ -39,7 +39,7 @@ body
 
 // THEMING
 .block-reveal__line:nth-of-type(1)
-  --bg #D5D2D1
+  --bg rebeccapurple
 .block-reveal__line:nth-of-type(2)
   --bg #8B91A1
 .block-reveal__line:nth-of-type(3)
