feat: implement block reveals

--- a/src/block-reveal/dev.pug
+++ b/src/block-reveal/dev.pug
@@ -1,8 +1,13 @@
-- const lines = ['Hey How', 'there are', 'reader! you?']
 .block-reveal
-  - for (const line of lines)
-    .block-reveal__line
-      - for (const word of line.split(' '))
-        span.block-reveal__word= word
-      span.block-reveal__block
-button restart
+  .block-reveal__line
+    .block-reveal__word CodePen
+    .block-reveal__word social
+    .block-reveal__block
+  .block-reveal__line
+    .block-reveal__word is
+    .block-reveal__word development
+    .block-reveal__block
+  .block-reveal__line
+    .block-reveal__word a
+    .block-reveal__word environment
+    .block-reveal__block
