--- a/src/block-reveal-markup-gen/style.styl
+++ b/src/block-reveal-markup-gen/style.styl
@@ -47,7 +47,7 @@ button
     transform scaleX(0)
     display inline-block
 
-  &__word
+  &__segment
     font-size 2.75rem
     display inline-block
     font-weight bold
@@ -57,8 +57,8 @@ button
     padding 0 5px
 
 .block-reveal__line:nth-of-type(1) .block-reveal__block
-  background #2eec71
+  background rgb(125, 199, 7)
 .block-reveal__line:nth-of-type(2) .block-reveal__block
-  background #e74c3c
+  background rgb(125, 199, 7)
 .block-reveal__line:nth-of-type(3) .block-reveal__block
-  background #663399
+  background rgb(125, 199, 7)
