--- a/src/block-reveal-react/style.styl
+++ b/src/block-reveal-react/style.styl
@@ -10,21 +10,6 @@ body
   align-items center
   justify-content center
 
-button
-  position fixed
-  top 1rem
-  left 1rem
-  background 0
-  opacity 0.5
-  border 0
-  cursor pointer
-  transition opacity .15s ease
-  font-weight bold
-  letter-spacing 2px
-
-  &:hover
-    opacity 1
-
 .block-reveal
   display inline-flex
   flex-direction column
@@ -47,7 +32,7 @@ button
     transform scaleX(0)
     display inline-block
 
-  &__word
+  &__segment
     font-size 2.75rem
     display inline-block
     font-weight bold
@@ -57,8 +42,8 @@ button
     padding 0 5px
 
 .block-reveal__line:nth-of-type(1) .block-reveal__block
-  background #2eec71
+  background rgb(125, 199, 7)
 .block-reveal__line:nth-of-type(2) .block-reveal__block
-  background #e74c3c
+  background rgb(125, 199, 7)
 .block-reveal__line:nth-of-type(3) .block-reveal__block
-  background #663399
+  background rgb(125, 199, 7)
