fix: bug with block reveal and two lines

--- a/src/block-reveal/dev.pug
+++ b/src/block-reveal/dev.pug
@@ -1,13 +1,13 @@
 .block-reveal
   .block-reveal__line
-    .block-reveal__word CodePen
-    .block-reveal__word social
+    .block-reveal__word Block
+    .block-reveal__word But
     .block-reveal__block
   .block-reveal__line
-    .block-reveal__word is
-    .block-reveal__word development
+    .block-reveal__word Reveal
+    .block-reveal__word ...
     .block-reveal__block
   .block-reveal__line
-    .block-reveal__word a
-    .block-reveal__word environment
+    .block-reveal__word Effect
+    .block-reveal__word on a loop
     .block-reveal__block
