--- a/src/block-reveal-markup-gen/style.styl
+++ b/src/block-reveal-markup-gen/style.styl
@@ -57,8 +57,8 @@ button
     padding 0 5px
 
 .block-reveal__line:nth-of-type(1) .block-reveal__block
-  background rgb(125, 199, 7)
+  background #db0a5b
 .block-reveal__line:nth-of-type(2) .block-reveal__block
-  background rgb(125, 199, 7)
+  background #4d05e8
 .block-reveal__line:nth-of-type(3) .block-reveal__block
-  background rgb(125, 199, 7)
+  background #23cba7
