--- a/src/unsplash-color-keyword-search/index.pug
+++ b/src/unsplash-color-keyword-search/index.pug
@@ -4,6 +4,7 @@ html
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title Some cool pen
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css')
     link(rel='stylesheet', href='style.css')
   body
     block content
