--- a/src/color-image-search/style.styl
+++ b/src/color-image-search/style.styl
@@ -174,6 +174,9 @@ input
   transition opacity .25s ease, filter .25s ease
   position relative
 
+  &:empty
+    min-height 0
+
   &--searching
     filter grayscale(1)
 
@@ -185,7 +188,7 @@ input
   cursor pointer
   overflow hidden
   text-transform uppercase
-  transition transform 0.1s ease
+  transition transform 0.1s ease, background .1s ease
   border-radius 10px
 
   &:hover
@@ -272,6 +275,9 @@ img
   left 0
   animation fadeIn 0.25s ease
   z-index -1
+
+.img
+  opacity 0
 
 .info
   cursor pointer
